# PG

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
client/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
client/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
client/src/api/: client.ts  hooks.ts
client/src/components/: Carousel.tsx  PropertyCard.tsx  StatCard.tsx
client/src/hooks/: useAuth.tsx
docs/: API.md  ARCHITECTURE.md  DATABASE.md  TESTING.md  WIREFRAMES.md  schema.sql
server/: .env.example  Dockerfile  alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0001_property_geo.py
server/app/: __init__.py  main.py
server/app/api/: router.py
server/app/api/v1/: admin.py  ai.py  auth.py  bookings.py  discovery.py  host.py  messaging.py  notifications.py  properties.py  reviews.py  search.py  students.py  uploads.py
server/app/core/: config.py  deps.py  geo.py  rate_limit.py  redis.py  security.py
server/app/db/: base.py  seed.py  session.py
server/app/models/: __init__.py  booking.py  engagement.py  enums.py  future.py  location.py  messaging.py  property.py  review.py  room.py  user.py
server/app/schemas/: auth.py  booking.py  common.py  property.py  search.py
server/app/services/: ai_service.py  auth_service.py  booking_service.py  maps_service.py  notification_service.py  search_service.py  storage_service.py
server/app/workers/: celery_app.py  tasks.py
server/tests/: test_ai_search.py  test_security.py
(+31 files in other folders)
